flexbox wrap issue

--- a/profiles/cr/themes/custom/campaign_base/sass/components/teaser-block/_teaser-block.scss
+++ b/profiles/cr/themes/custom/campaign_base/sass/components/teaser-block/_teaser-block.scss
@@ -70,7 +70,6 @@
 }
 .teaser-block__body {
   @include flex-wrap(wrap);
-  @include flex-flow(column nowrap);
   @include align-content(center);
   @include justify-content(center);
   @include align-items(center);
